manifests/row-major-web.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: row-major-web

---

kind: Service
apiVersion: v1
metadata:
  name: row-major-web-content-service
  namespace: row-major-web
  labels:
    app: row-major-web
    component: content
spec:
  type: NodePort
  selector:
    app: row-major-web
    component: content
  ports:
    - name: http
      protocol: TCP
      port: 8001
      targetPort: 8080

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: row-major-web-content-deployment
  namespace: row-major-web
  labels:
    app: row-major-web
    component: content
spec:
  selector:
    matchLabels:
      app: row-major-web
      component: content
  replicas: 1
  template:
    metadata:
      labels:
        app: row-major-web
        component: content
    spec:
      serviceAccountName: webalator
      containers:
        - name: row-major-web-content
          image: gcr.io/bomsync-214520/webalator:1589697017
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          command:
            - /app/webalator/webalator
            - --static-content-dir=webalator/static-content
            - --template-dir=webalator/content
            - --listen=0.0.0.0:8080
            - --debug-listen=0.0.0.0:8081
            - --enable-profiling
            - --enable-tracing
            - --enable-metrics
          
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ingress6
  namespace: row-major-web
  labels:
    app: row-major-web
    component: ingress
  annotations:
    networking.gke.io/managed-certificates: www-row-major-net,row-major-net
    kubernetes.io/ingress.global-static-ip-name: "row-major-web"
    # This doesn't work yet.  Watch
    # https://github.com/kubernetes/ingress-gce/issues/51 and
    # https://issuetracker.google.com/issues/35904733
    #
    #kubernetes.io/ingress.allow-http: "false"
    #ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  backend:
    serviceName: row-major-web-content-service
    servicePort: http
